# SerenObservatory

./: .gitignore  Makefile  README.md  SerenAgent.slnx  SerenObservatory.slnx  seren-agent-setup.ps1  seren-agent-setup.sh  seren-agent.yaml.sample  seren-observatory.yaml.sample
.github/: dependabot.yml
.github/workflows/: release.yml
SerenAgent/: SerenAgent.pyproj  pyproject.toml  seren-agent.service.sample  seren-agent.yaml.sample
SerenAgent/seren_agent/: __init__.py  __main__.py  app.py  auth.py  config.py  lifecycle.py  manifests.py  request_log.py  requirements.txt  service_routes.py  system_routes.py
SerenAgent/seren_agent/services/: __init__.py  comfy.py  coral.py  kokoro.py  whisper.py
SerenAgent/tests/: conftest.py  test_app.py  test_auth.py  test_config.py  test_manifests.py
SerenObservatory/: SerenObservatory.pyproj  pyproject.toml  seren-observatory.service.sample  seren-observatory.yaml.sample
SerenObservatory/seren_observatory/: __init__.py  __main__.py  _version.py  app.py  auth.py  config.py  lifecycle.py  manifests.py  request_log.py  requirements.txt  service_routes.py  system_routes.py
SerenObservatory/seren_observatory/services/: __init__.py  comfy.py  kokoro.py  llama.py  whisper.py
SerenObservatory/seren_observatory/viewer/ui/: body.html  header_aside.html  scripts.js  styles.css  tabs.html
SerenObservatory/tests/: conftest.py  test_app.py  test_auth.py  test_config.py  test_manifests.py
