[build-system]
requires = ["setuptools>=70", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

# ── Project metadata ──────────────────────────────────────────────────────
[project]
name = "seren-observatory"
dynamic = ["version"]
description = "Per-node management plane for the Seren cluster - manifest-driven service lifecycle, status, and orchestration."
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
keywords = ["seren", "jetson", "observatory", "fastapi", "llm"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: No Input/Output (Daemon)",
	"Framework :: FastAPI",
	"Intended Audience :: Developers",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: System :: Systems Administration",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

dependencies = [
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.32.0",
	"pydantic>=2.9.0",
	"httpx>=0.27.0",
	"python-multipart>=0.0.12",
	# Shared Seren core: get_version + the viewer baseplate (render_from_dir).
	# NOTE: config + auth deliberately do NOT come from Meninges here - the
	# Observatory's bearer is a ~/.seren/secrets.json safety interlock, not a
	# Meninges-resolved config token. No [keyring] extra: this service never
	# writes secrets to the OS keychain.
	"seren-meninges>=1.0.0,<2",
	# Shared request logging - ONE copy across the family (SerenSinew),
	# replacing the per-service request_log.py. env_prefix preserves
	# Observatory's SEREN_AGENT_LOG_* contract; service_name resolves the
	# log filename (-> observatory-requests.log).
	"seren-sinew>=1.0.0,<2",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.0",
	"pytest-asyncio>=0.24",
	"httpx2>=0.28",   # Starlette TestClient's successor HTTP backend (Tom Christie / pydantic); silences the httpx-deprecation warning
]

[project.scripts]
seren-observatory = "seren_observatory.app:main"

[project.urls]
Homepage = "https://github.com/ChadRoesler/SerenObservatory"
Repository = "https://github.com/ChadRoesler/SerenObservatory"
"Bug Tracker" = "https://github.com/ChadRoesler/SerenObservatory/issues"

[tool.setuptools_scm]
# .git is one level above pyproject.toml (repo root, not the SerenMemory subdir)
root = ".."
version_scheme = "release-branch-semver"
# Write the tag-derived version into the package (shipped in the wheel, read
# by __init__ / importlib.metadata). Replaces the old sed-on-__init__ hack -
# version now flows from the git tag with no manual step. _version.py is
# gitignored; it's a build artifact, never committed.
version_file = "seren_memory/_version.py"

# ── Package discovery ────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["seren_observatory*"]

# Ship the viewer fragment bricks inside the wheel: the leaf files in
# viewer/ui/ that render_from_dir snaps onto the SerenMeninges baseplate.
# Without this, pip strips non-.py files and GET /viewer renders an empty
# shell on an installed copy (works in a dev checkout, silently breaks once
# installed - the classic package-data gotcha).
[tool.setuptools.package-data]
seren_observatory = ["viewer/ui/*.html", "viewer/ui/*.css", "viewer/ui/*.js"]

# ── pytest ───────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"